internal/kgateway/setup/testdata/waypoint/happypath.yaml
# kind: Gateway
# apiVersion: gateway.networking.k8s.io/v1
# metadata:
#   name: http-gw-for-test
#   namespace: gwtest
# spec:
#   gatewayClassName: kgateway
#   listeners:
#   - protocol: HTTP
#     port: 8080
#     name: http
#     allowedRoutes:
#       namespaces:
#         from: All
# ---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: kgateway-waypoint
  namespace: gwtest
spec:
  gatewayClassName: kgateway-waypoint
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: proxy
    port: 15088
    protocol: istio.io/PROXY
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: reviews
#   namespace: gwtest
#   labels:
#     app: reviews
#     service: reviews
#     istio.io/ingress-use-waypoint: "true"
#     istio.io/use-waypoint: kgateway-waypoint
# spec:
#   clusterIP: 10.96.43.182
#   clusterIPs:
#   - 10.96.43.182
#   ports:
#     - name: http
#       port: 8000
#       targetPort: 8080
#   selector:
#     app: reviews
# ---
# apiVersion: discovery.k8s.io/v1
# kind: EndpointSlice
# metadata:
#   name: reviews-slice
#   namespace: gwtest
#   labels:
#     kubernetes.io/service-name: reviews
#     app: reviews
#     service: reviews
# addressType: IPv4
# endpoints:
#   - addresses:
#       - 10.244.1.11
#     conditions:
#       ready: true
#     nodeName: worker
#     targetRef:
#       kind: Pod
#       name: reviews-1
#       namespace: default
# ports:
#   - name: http
#     port: 8080
#     protocol: TCP
# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: happypath
#   namespace: gwtest
# spec:
#   parentRefs:
#     - name: http-gw-for-test
#   hostnames:
#     - "www.example.com"
#   rules:
#     - backendRefs:
#         - name: reviews
#           port: 8000
# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: HTTPRoute
# metadata:
#   name: http-filter-rewrite
#   namespace: gwtest
# spec:
#   parentRefs:
#   - group: ""
#     kind: Service
#     name: reviews
#     port: 8000
#   rules:
#   - backendRefs:
#     - group: ""
#       kind: Service
#       name: reviews
#       port: 8000
#       weight: 1
#     filters:
#     - type: URLRewrite
#       urlRewrite:
#         hostname: reviews
#         path:
#           replacePrefixMatch: /status/418
#           type: ReplacePrefixMatch
#     matches:
#     - path:
#         type: PathPrefix
#         value: /get
#   - backendRefs:
#     - group: ""
#       kind: Service
#       name: reviews
#       port: 8000
#       weight: 1
#     matches:
#     - path:
#         type: PathPrefix
#         value: /
